rotary network sync fix